--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ img {
      margin: 0 auto;
 }
 
-.container1::after {
+.container1, .badge-sec::after {
      content: "";
      display: table;
      clear: both;
@@ -59,7 +59,7 @@ img {
      width: calc(100% / 3 - (2rem));
      margin: 1rem;
      margin-bottom: 2rem;
-     min-width: 11rem;
+     min-width: 12rem;
      box-shadow:
      .1rem .1rem  .4rem rgb(192, 192, 192),
      .1rem .1rem  .4rem rgb(190, 190, 190),
